header done with image

--- a/style.css
+++ b/style.css
@@ -4,3 +4,44 @@
     font-family: 'Noto Sans', sans-serif;
 font-family: 'Work Sans', sans-serif;
 }
+header{
+    background-color: #ecceac59;
+    padding: 50px 240px;
+}
+nav{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+nav > ul{
+    display: flex;
+}
+
+nav li{
+    list-style: none;
+    margin-right: 3rem;
+    font-weight: 500;
+    font-size: 1rem;
+}
+
+nav li a{
+    text-decoration: none;
+    color: black;
+}
+.nav-title{
+    font-size: 2rem;
+    font-weight: 700;
+    color: #131313;
+}
+.banner-content{
+    width: 862px;
+    margin: 0 auto;
+}
+.banner-title{
+    font-size: 3rem;
+    font-weight: 700;
+    color: #131313;
+}
+.banner-description{
+    color: #727272;
+}
