--- a/style.css
+++ b/style.css
@@ -1,5 +1,16 @@
 /* google font work sans */
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans:wght@600&family=Work+Sans:ital,wght@0,400;0,600;1,700;1,800&display=swap');
+/* shared style */
+.btn-primary{
+    border-radius: 8px;
+    color: #ffffff;
+    background: #FF900E;
+    padding: 20px 25px;
+    font-size: 1.25;
+    font-weight: 600;
+    cursor: pointer;
+    border: 0;
+}
 *{
     font-family: 'Noto Sans', sans-serif;
 font-family: 'Work Sans', sans-serif;
@@ -44,4 +55,27 @@ nav li a{
 }
 .banner-description{
     color: #727272;
+}
+.banner img{
+    width: 100%;
+    margin-top: 20px;
+}
+
+
+
+/* responsive for mobile */
+@media screen and (max-width:576px) {
+    nav{
+        flex-direction: column;
+    }
+    header{
+        padding: 10px;
+    }
+    .banner-content{
+        width: 100%;
+    }
+    nav > ul{
+        width: 100%;
+        padding: 5px;
+    }
 }
