--- a/style.css
+++ b/style.css
@@ -79,3 +79,28 @@ nav li a{
         padding: 5px;
     }
 }
+main{
+    max-width: 1440px;
+    margin: 0 auto;
+}
+.teams-container{
+    display: flex;
+    align-items: center;
+}
+.teams-img-container{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 1rem;
+}
+.teams-content{
+    padding: 0 70px;
+}
+.teams-content-title{
+    font-size: 3rem;
+}
+.teams-content .quick-list{
+    color: #828282;
+}
+.teams-content .title-features{
+    color: #FF900E;
+}
